[Threaded Compositor] Flickering when zooming in/out in maps.google.com https://bugs.webkit.org/show_bug.cgi?id=154069

Patch by Miguel Gomez <magomez@igalia.com> on 2016-07-21
Reviewed by Carlos Garcia Campos.

Add a new extra buffer to GraphicsContext3D when using the Threaded Compositor,
so it doesn't have to reuse the buffers that are still waiting for composition.

Covered by existing tests.

* platform/graphics/GraphicsContext3D.h:
Add a new texture to use for the rendering. Remove the compositor fbo we were using.
* platform/graphics/cairo/GraphicsContext3DCairo.cpp:
(WebCore::GraphicsContext3D::GraphicsContext3D):
Initialize the new texture and remove the previous fbo related code.
(WebCore::GraphicsContext3D::~GraphicsContext3D):
Properly destroy the new texture and remove the previous fbo related code.
* platform/graphics/opengl/GraphicsContext3DOpenGL.cpp:
(WebCore::GraphicsContext3D::reshapeFBOs):
Allocate the new texture and remove the previous fbo allocation.
* platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:
(WebCore::GraphicsContext3D::prepareTexture):
Use a single fbo with three textures instead of two fbos with a texture each.
Rotate the three textures usage so:
- m_texture becomes m_compositorTexture to be pushed to the compositor.
- m_intermediateTexture becomes m_texture to receive the next rendering.
- m_compositorTexture becomes m_intermediateTexture.
And add a glFlush() to ensure that the gl commands are sent to the pipeline.
* platform/graphics/opengl/GraphicsContext3DOpenGLES.cpp:
(WebCore::GraphicsContext3D::reshapeFBOs):
Allocate the new texture.

Canonical link: https://commits.webkit.org/178175@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203498 268f45cc-cd09-0410-ab3c-d52691b4dbfc